[package]
name = "lamp"
version = "0.1.0"
authors = ["crapStone <wewr.mc@gmail.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = "2.33"

[dependencies]
clap = "2.33"
exitcode = "1.1.2"
